Fixed alignment of brand name before nav bar

--- a/public/Content/style.css
+++ b/public/Content/style.css
@@ -13,8 +13,7 @@ p {
 }
 
 .navbar-brand {
-    margin-left: auto;
-    margin-right: auto;
+    text-align: center;
     color: black;
 }
 
